--- a/angular-ocr/src/app/modules/pages/ocr-main/ocr-uploading-dialog/ocr-uploading-dialog.component.html
+++ b/angular-ocr/src/app/modules/pages/ocr-main/ocr-uploading-dialog/ocr-uploading-dialog.component.html
@@ -59,7 +59,7 @@
   </div>
   <ng-container *ngIf="files.length > 0">
     <div class="flex flex-col flex-[2] m-8 divide-y divide-gray-apple-aqua-300 w-full max-h-[80vh] overflow-hidden overflow-y-auto">
-      <ng-container *ngFor="let file of files">
+      <ng-container *ngFor="let file of files; let i = index">
         <ocr-upload-task class="pt-4 pb-4" [file]="file"></ocr-upload-task>
       </ng-container>
     </div>
