--- a/angular-ocr/src/app/modules/pages/ocr-main/ocr-progressing-dialog/ocr-progressing-dialog.component.html
+++ b/angular-ocr/src/app/modules/pages/ocr-main/ocr-progressing-dialog/ocr-progressing-dialog.component.html
@@ -28,6 +28,7 @@
       Nhận dạng
     </button>
     <button
+      *ngIf="showBtnExtract"
       (click)="trichXuatMetadata()"
       class="
         w-full
@@ -55,8 +56,8 @@
       Trích xuất Metadata
     </button>
   </div>
-  <div class="px-4 py-3 sm:px-8 p-4">
-    <!-- <ocr-progress-task [state]="state" [percentage]="progressOCR.getValue()"></ocr-progress-task> -->
+  <div *ngIf="taskid" class="px-4 py-3 sm:px-8 p-4">
+    <ocr-progress-task [state]="state" [percentage]="progressOCR | async"></ocr-progress-task>
   </div>
   <div class="flex overflow-hidden overflow-y-auto flex-col md:flex-row lg:overflow-hidden w-full pt-4 pb-4">
     <div class="flex flex-1 min-h-[50vh]">
@@ -75,7 +76,7 @@
       <div class="flex flex-1">
         <textarea name="textarea" [(ngModel)]="ocrtext" class="w-full h-full resize-none border rounded-md"></textarea>
       </div>
-      <div class="flex flex-1">3</div>
+      <div class="flex flex-1"></div>
     </div>
   </div>
 </ng-container>
