--- a/angular-ocr/src/app/modules/pages/ocr-main/ocr-main-add-folder-dialog/ocr-main-add-folder-dialog.component.html
+++ b/angular-ocr/src/app/modules/pages/ocr-main/ocr-main-add-folder-dialog/ocr-main-add-folder-dialog.component.html
@@ -14,6 +14,7 @@
         {{'OCR.THEMTHUMUCMOI' | translate}}
       </h3>
       <div class="mt-2 w-full">
+        <app-share-messages-error></app-share-messages-error>
         <input
           [(ngModel)]="nameFolder"
           class="mt-1 w-full border-gray-300  rounded-xl  focus:ring-0 focus:border-green-600"
