--- a/angular-ocr/src/app/modules/login/login.component.html
+++ b/angular-ocr/src/app/modules/login/login.component.html
@@ -1,26 +1,27 @@
 <div class="font-sans">
-  <div class="relative min-h-screen flex flex-col sm:justify-center items-center bg-gradient-to-r from-gray-300 to-gray-700">
+  <div
+    class="relative min-h-screen flex flex-col sm:justify-center items-center bg-gradient-to-r from-gray-300 to-gray-700">
     <div class="relative sm:max-w-sm w-full">
       <div class="relative w-full rounded-3xl px-6 py-4 bg-gray-100 shadow drop-shadow border-gray-100 border-2">
-        <label for="" class="block mt-3 text-gray-700 text-center font-semibold"> Đăng nhập </label>
-        <form method="#" action="#" class="mt-10">
+        <label class="block mt-3 text-gray-700 text-center font-semibold" for=""> Đăng nhập </label>
+        <form action="#" class="mt-10">
           <app-messages-error></app-messages-error>
           <div>
             <input
               [(ngModel)]="username"
-              type="text"
+              class="mt-1 block w-full border-gray-300 bg-gray-100 h-11 rounded-xl shadow-xl focus:ring-0 focus:border-green-600"
               name="username"
               placeholder="Tên đăng nhập"
-              class="mt-1 block w-full border-gray-300 bg-gray-100 h-11 rounded-xl shadow-xl focus:ring-0 focus:border-green-600"
+              type="text"
             />
           </div>
           <div class="mt-7">
             <input
-              name="password"
               [(ngModel)]="password"
-              type="password"
-              placeholder="Mật khẩu"
               class="mt-1 block w-full border-gray-300 bg-gray-100 h-11 rounded-xl shadow-xl focus:ring-0 focus:border-green-600"
+              name="password"
+              placeholder="Mật khẩu"
+              type="password"
             />
           </div>
           <div class="mt-7">
