--- a/angular-ocr/src/app/modules/pages/ocr-main/ocr-main-list-new/ocr-main-list-new.component.html
+++ b/angular-ocr/src/app/modules/pages/ocr-main/ocr-main-list-new/ocr-main-list-new.component.html
@@ -142,277 +142,90 @@
       </div>
     </div>
 
-    <div class="flex flex-col">
-      <div class="-my-2 overflow-x-auto sm:-mx-6 lg:-mx-8">
-        <div class="py-2 align-middle inline-block min-w-full sm:px-6 lg:px-8">
-          <div class="shadow overflow-hidden border-b border-gray-200">
-            <mat-table #table [dataSource]="dataSource | async" class="min-w-full divide-y divide-gray-200 bg-white"
-                       matSort>
-              <ng-container matColumnDef="drag">
-                <mat-header-cell
-                  *matHeaderCellDef
-                  class="bg-gray-200 px-4 py-3 text-left text-xs font-semibold text-gray-700 uppercase tracking-wider max-w-[70px]"
-                >
-                </mat-header-cell>
-                <mat-cell
-                  *matCellDef="let element; let pos = index"
-                  class="pl-6 px-4 py-4 text-center whitespace-nowrap align-middle max-w-[70px]"
-                >
-                  <span
-                    class="
-                      cursor-move
-                      inline-block
-                      focus:text-gray-900 focus:outline-none
-                      transition
-                      duration-500
-                      ease-in-out
-                      transform
-                      lg:hover:-translate-x lg:hover:scale-105
-                    "
-                  >
-                    <svg height="24" viewBox="0 0 24 24" width="24" xmlns="http://www.w3.org/2000/svg">
-                      <path d="M4 6h16v2H4zm0 5h16v2H4zm0 5h16v2H4z"></path>
-                    </svg>
-                  </span>
-                </mat-cell>
-              </ng-container>
-
-              <ng-container matColumnDef="name">
-                <mat-header-cell
-                  *matHeaderCellDef
-                  class="bg-gray-200 px-4 py-4 text-left text-xs font-semibold text-gray-700 uppercase tracking-wider"
-                >
-                  {{ 'OCR.TEN' | translate }}
-                </mat-header-cell>
-                <mat-cell *matCellDef="let element; let pos = index"
-                          class="px-4 py-4 text-center whitespace-nowrap align-middle">
-                  <span class="pr-2">
-                    <svg height="24" viewBox="0 0 24 24" width="24" xmlns="http://www.w3.org/2000/svg">
+    <div class="w-full mb-8 overflow-hidden rounded-lg shadow-lg bg-white">
+      <div class="w-full overflow-x-auto">
+        <table class="w-full table-auto">
+          <thead>
+          <tr
+            class="h-[50px] items-center bg-gray-200 px-4 py-4 text-left text-xs font-semibold text-gray-900 uppercase tracking-wider">
+            <th class="px-4 py-3 align-middle">TÊN</th>
+            <th class="px-4 py-3 align-middle">TRẠNG THÁI</th>
+            <th class="px-4 py-3 align-middle">NGƯỜI TẠO</th>
+            <th class="px-4 py-3 align-middle">NGÀY TẠO</th>
+            <th class="px-4 py-3 align-middle">LOẠI VĂN BẢN</th>
+            <th class="px-4 py-3 align-middle">CƠ QUAN BAN HÀNH</th>
+            <th class="px-4 py-3 align-middle">NGÀY BAN HÀNH</th>
+            <th class="px-4 py-3 align-middle">SỐ VĂN BẢN</th>
+            <th class="px-4 py-3 align-middle">NGƯỜI KÝ</th>
+          </tr>
+          </thead>
+          <tbody class="bg-white">
+          <ng-container *ngIf="(data$ | async) as datasoucre">
+            <ng-container *ngFor="let element of datasoucre">
+              <ng-container *ngFor="let item of element.folders">
+                <tr (click)="item.isOpen = !item.isOpen" class="text-gray-700">
+                  <td
+                    class="px-4 py-4 h-full whitespace-nowrap align-middle">
+                  <span class="pr-2 ">
+                    <ng-container *ngIf="!item.isOpen; else closeFolderSvg">
+                       <svg class="relative inline-block" height="24" viewBox="0 0 24 24" width="24"
+                            xmlns="http://www.w3.org/2000/svg">
                       <path
                         d="M20 5h-9.586L8.707 3.293A.997.997 0 0 0 8 3H4c-1.103 0-2 .897-2 2v14c0 1.103.897 2 2 2h16c1.103 0 2-.897 2-2V7c0-1.103-.897-2-2-2z"
                       ></path>
-                    </svg> </span
-                  >{{ element.name }}
-                </mat-cell>
-              </ng-container>
-
-              <ng-container matColumnDef="trangthai">
-                <mat-header-cell
-                  *matHeaderCellDef
-                  class="min-w-[220px] bg-gray-200 px-4 py-3 text-left text-xs font-semibold text-gray-700 uppercase tracking-wider"
-                >
-                  {{ 'OCR.TRANGTHAI' | translate }}
-                </mat-header-cell>
-                <mat-cell *matCellDef="let element; let pos = index"
-                          class="min-w-[220px] px-4 py-4 items-start flex flex-col">
-                  <ng-container *ngIf="getStateOCR(element) != ''">
-                    <div class="text-orange-500 font-bold">
-                      {{ getStateOCR(element) }}
-                    </div>
+                    </svg>
+                    </ng-container>
+                    <ng-template #closeFolderSvg>
+                      <svg class="relative inline-block" height="24" viewBox="0 0 24 24" width="24"
+                           xmlns="http://www.w3.org/2000/svg"><path
+                        d="M2.165 19.551c.186.28.499.449.835.449h15c.4 0 .762-.238.919-.606l3-7A.998.998 0 0 0 21 11h-1V8c0-1.103-.897-2-2-2h-6.655L8.789 4H4c-1.103 0-2 .897-2 2v13h.007a1 1 0 0 0 .158.551zM18 8v3H6c-.4 0-.762.238-.919.606L4 14.129V8h14z"></path></svg>
+                    </ng-template>
+                  </span>
+                    {{ item.name }}
+                  </td>
+                  <!-- trạng thái-->
+                  <td class="px-4 py-4 h-full whitespace-nowrap align-middle">
+                    <ng-container *ngIf="getStateOCR(item) != ''">
+                      <div class="font-bold">
+                        {{ getStateOCR(item)}}
+                      </div>
+                    </ng-container>
+                    <ng-container *ngIf="getStateExtract(item) != ''">
+                      <div class="font-bold">
+                        {{ getStateExtract(item)}}
+                      </div>
+                    </ng-container>
+                    <ng-container *ngIf="getStateNormal(item) != ''">
+                      <div class="font-bold">
+                        {{ getStateNormal(item)}}
+                      </div>
+                    </ng-container>
+                  </td>
+                  <td class="px-4 py-4 h-full whitespace-nowrap align-middle">
+                    <span>{{item.createdBy}}</span>
+                  </td>
+                  <td class="px-4 py-4 h-full whitespace-nowrap align-middle">
+                    <span>{{item.createdDate | date : 'dd/MM/yyyy'}}</span>
+                  </td>
+                  <td [attr.colspan]="lengthMetadata" class="px-4 py-4 h-full whitespace-nowrap align-middle">
+                  </td>
+                </tr>
+                <ng-container *ngIf="item.isOpen">
+                  <ng-container *ngFor="let file of element.folders">
+                    <tr class="text-gray-700">
+                      <td [attr.colspan]="lengthColTable" class="px-4 py-4 h-full whitespace-nowrap align-middle">
+                        open folder, close folder
+                      </td>
+                    </tr>
                   </ng-container>
-                  <ng-container *ngIf="getStateExtract(element) != ''">
-                    <div class="text-purple-500 font-bold">
-                      {{ getStateExtract(element) }}
-                    </div>
-                  </ng-container>
-                </mat-cell>
+                </ng-container>
               </ng-container>
-
-              <ng-container matColumnDef="nguoitao">
-                <mat-header-cell
-                  *matHeaderCellDef
-                  class="bg-gray-200 px-4 py-3 text-left text-xs font-semibold text-gray-700 uppercase tracking-wider"
-                >
-                  {{ 'OCR.NGUOITAO' | translate }}
-                </mat-header-cell>
-                <mat-cell *matCellDef="let element; let pos = index"
-                          class="px-4 py-4 text-center whitespace-nowrap align-middle">
-                  {{ element.createdBy }}
-                </mat-cell>
-              </ng-container>
-
-              <ng-container matColumnDef="ngaytao">
-                <mat-header-cell
-                  *matHeaderCellDef
-                  class="bg-gray-200 px-4 py-4 text-left text-xs font-semibold text-gray-700 uppercase tracking-wider"
-                >
-                  {{ 'OCR.NGAYTAO' | translate }}
-                </mat-header-cell>
-                <mat-cell *matCellDef="let element; let pos = index"
-                          class="px-4 py-4 text-center whitespace-nowrap align-middle">
-                  {{ element.createdDate | date: 'dd/MM/yyyy' }}
-                </mat-cell>
-              </ng-container>
-
-              <ng-container matColumnDef="loaivanban">
-                <mat-header-cell
-                  *matHeaderCellDef
-                  class="bg-gray-200 px-4 py-4 text-left text-xs font-semibold text-gray-700 uppercase tracking-wider"
-                >
-                  {{ 'OCR.LOAIVANBAN' | translate }}
-                </mat-header-cell>
-                <mat-cell *matCellDef="let element; let pos = index"
-                          class="px-4 py-4 text-center whitespace-nowrap align-middle">
-                  {{ element.loaivanban }}
-                </mat-cell>
-              </ng-container>
-
-              <ng-container matColumnDef="coquanbanhanh">
-                <mat-header-cell
-                  *matHeaderCellDef
-                  class="bg-gray-200 px-4 py-4 text-left text-xs font-semibold text-gray-700 uppercase tracking-wider"
-                >
-                  {{ 'OCR.COQUANBANHANH' | translate }}
-                </mat-header-cell>
-                <mat-cell *matCellDef="let element; let pos = index"
-                          class="px-4 py-4 text-center whitespace-nowrap align-middle">
-                  {{ element.coquanbanhanh }}
-                </mat-cell>
-              </ng-container>
-
-              <ng-container matColumnDef="ngaybanhanh">
-                <mat-header-cell
-                  *matHeaderCellDef
-                  class="bg-gray-200 px-4 py-4 text-left text-xs font-semibold text-gray-700 uppercase tracking-wider"
-                >
-                  {{ 'OCR.NGAYBANHANH' | translate }}
-                </mat-header-cell>
-                <mat-cell *matCellDef="let element; let pos = index"
-                          class="px-4 py-4 text-center whitespace-nowrap align-middle">
-                  {{ element.ngaybanhanh | date: 'dd/MM/yyyy' }}
-                </mat-cell>
-              </ng-container>
-
-              <ng-container matColumnDef="sovanban">
-                <mat-header-cell
-                  *matHeaderCellDef
-                  class="bg-gray-200 px-4 py-4 text-left text-xs font-semibold text-gray-700 uppercase tracking-wider"
-                >
-                  {{ 'OCR.SOVANBAN' | translate }}
-                </mat-header-cell>
-                <mat-cell *matCellDef="let element; let pos = index"
-                          class="px-4 py-4 text-center whitespace-nowrap align-middle">
-                  {{ element.sovanban }}
-                </mat-cell>
-              </ng-container>
-
-              <ng-container matColumnDef="nguoiky">
-                <mat-header-cell
-                  *matHeaderCellDef
-                  class="bg-gray-200 px-4 py-4 text-left text-xs font-semibold text-gray-700 uppercase tracking-wider"
-                >
-                  {{ 'OCR.NGUOIKY' | translate }}
-                </mat-header-cell>
-                <mat-cell *matCellDef="let element; let pos = index"
-                          class="px-4 py-4 text-center whitespace-nowrap align-middle">
-                  {{ element.nguoiky }}
-                </mat-cell>
-              </ng-container>
-
-              <mat-header-row *matHeaderRowDef="displayedColumns; sticky: true"></mat-header-row>
-              <mat-row
-                (click)="isActive(row)"
-                *matRowDef="let row; columns: displayedColumns"
-                [cdkDetailRowTpl]="tpl"
-                [cdkDetailRow]="row"
-                [ngClass]="{ highlight: selectedRowIndex == row.name }"
-                class="element-row"
-                matRipple
-              >
-              </mat-row>
-            </mat-table>
-          </div>
-        </div>
+            </ng-container>
+          </ng-container>
+          </tbody>
+        </table>
       </div>
     </div>
 
-    <ng-template #tpl let-element>
-      <div [@detailExpand] class="row-expanded" style="overflow: hidden">
-        <div *ngFor="let file of element.files" class="flex cell-expand">
-          <span class="relative px-4 py-2 text-center whitespace-nowrap align-middle min-w-[70px]">
-            <ng-container *ngIf="file.isRecogniting">
-              <div class="relative ocr-progress-spinner text-orange-600">
-                <!-- TODO -->
-                <!-- <mat-progress-spinner mode="determinate" value="{{ file.progressOcr.total }}" diameter="30"></mat-progress-spinner> -->
-                <mat-progress-spinner diameter="30" mode="determinate" value="80"></mat-progress-spinner>
-                <!-- <span class="text-sm" style="position: absolute; left: 7px; top: 6px">{{ file.progressOcr.total }}</span> -->
-                <span class="text-sm" style="position: absolute; left: 7px; top: 6px">80</span>
-              </div>
-            </ng-container>
-            <ng-container *ngIf="file.isExtractingMetadata">
-              <div class="relative extract-progress-spinner">
-                <mat-progress-spinner diameter="30" mode="indeterminate"></mat-progress-spinner>
-              </div>
-            </ng-container>
-          </span>
-          <span [matMenuTriggerFor]="menu" class="min-w-xl relative px-4 py-2 whitespace-nowrap align-middle">
-            <ng-container *ngIf="file.filesRawUrl">
-              <div class="cursor-pointer">
-                {{ getNameFile(file.filesRawUrl) }}
-              </div>
-            </ng-container>
-            <ng-container *ngIf="file.filesRecogntitionUrl">
-              <div class="text-orange-600 cursor-pointer">
-                {{ getNameFile(file.filesOcr) }}
-              </div>
-            </ng-container>
-            <ng-container *ngIf="file.filesExtractMetadataUrl">
-              <div class="text-purple-600 cursor-pointer">
-                {{ getNameFile(file.filesExtract) }}
-              </div>
-            </ng-container>
-          </span>
-        </div>
-        <mat-menu #menu="matMenu">
-          <div>
-            <button mat-menu-item>
-              <span class="font-semibold text-orange-400">
-                <svg class="inline" fill="currentColor" height="24" viewBox="0 0 24 24" width="24"
-                     xmlns="http://www.w3.org/2000/svg">
-                  <path
-                    d="M3 4v5h2V5h4V3H4a1 1 0 0 0-1 1zm18 5V4a1 1 0 0 0-1-1h-5v2h4v4h2zm-2 10h-4v2h5a1 1 0 0 0 1-1v-5h-2v4zM9 21v-2H5v-4H3v5a1 1 0 0 0 1 1h5zM2 11h20v2H2z"
-                  ></path>
-                </svg>
-                Nhận dạng</span
-              >
-            </button>
-            <button mat-menu-item>
-              <span class="font-semibold text-purple-400">
-                <svg class="inline" fill="currentColor" height="24" viewBox="0 0 24 24" width="24"
-                     xmlns="http://www.w3.org/2000/svg">
-                  <path d="M11 16h2V7h3l-4-5-4 5h3z"></path>
-                  <path
-                    d="M5 22h14c1.103 0 2-.897 2-2v-9c0-1.103-.897-2-2-2h-4v2h4v9H5v-9h4V9H5c-1.103 0-2 .897-2 2v9c0 1.103.897 2 2 2z"
-                  ></path>
-                </svg>
-                Trích xuất metadata</span
-              >
-            </button>
-            <button mat-menu-item>
-              <span class="font-semibold text-blue-500">
-                <svg class="inline" fill="currentColor" height="24" viewBox="0 0 24 24" width="24"
-                     xmlns="http://www.w3.org/2000/svg">
-                  <path d="m12 16 4-5h-3V4h-2v7H8z"></path>
-                  <path d="M20 18H4v-7H2v7c0 1.103.897 2 2 2h16c1.103 0 2-.897 2-2v-7h-2v7z"></path>
-                </svg>
-                Tải xuống</span
-              >
-            </button>
-            <button mat-menu-item>
-              <span class="font-semibold text-red-400">
-                <svg class="inline" fill="currentColor" height="24" viewBox="0 0 24 24"
-                     width="24" xmlns="http://www.w3.org/2000/svg">
-                  <path
-                    d="M5 20a2 2 0 0 0 2 2h10a2 2 0 0 0 2-2V8h2V6h-4V4a2 2 0 0 0-2-2H9a2 2 0 0 0-2 2v2H3v2h2zM9 4h6v2H9zM8 8h9v12H7V8z"
-                  ></path>
-                  <path d="M9 10h2v8H9zm4 0h2v8h-2z"></path>
-                </svg>
-                Xoá</span
-              >
-            </button>
-          </div>
-        </mat-menu>
-      </div>
-    </ng-template>
   </div>
 </div>
