--- a/angular-ocr/src/app/modules/pages/ocr-main/ocr-main-edit-ocr-dialog/ocr-main-edit-ocr-dialog.component.html
+++ b/angular-ocr/src/app/modules/pages/ocr-main/ocr-main-edit-ocr-dialog/ocr-main-edit-ocr-dialog.component.html
@@ -1,12 +1,19 @@
-<ocr-uploading-dialog (emitOcrModel)="getOrcModel($event)" (files)="getFiles($event)"
-                      [ocrModel]="ocrModel"></ocr-uploading-dialog>
-<!-- footer -->
-<ng-container *ngIf="tabIndex == 0"
->
-  <div
-    class="justify-end items-center px-4 py-3 sm:px-8 sm:flex sm:flex-row p-4 border-solid border-t-2 border-gray-200">
-    <button (click)="close()"
-            class="
+<div
+  class="justify-start items-center px-4 py-3 sm:px-8 sm:flex sm:flex-row p-4 border-solid border-b-2 border-gray-200">
+  <ng-container *ngIf="activeFolder$ | async as folder">
+    <span class="text-lg leading-6 font-medium">
+      Thêm tệp tin vào thư mục:
+    </span>&nbsp;
+    <span class="text-lg leading-6 font-medium text-orange-apple-aqua-500">
+        {{folder.name}}
+      </span>
+  </ng-container>
+</div>
+<ocr-uploading-dialog></ocr-uploading-dialog>
+<div
+  class="justify-end items-center px-4 py-3 sm:px-8 sm:flex sm:flex-row p-4 border-solid border-t-2 border-gray-200">
+  <button (click)="close()"
+          class="
         w-full
         inline-flex
         justify-center
@@ -28,9 +35,8 @@
         ease-in-out
         transform
       "
-    >
-      Trở lại
-    </button>
-  </div>
-</ng-container
->
+  >
+    Trở lại
+  </button>
+</div>
+
