--- a/angular-ocr/src/app/modules/pages/ocr-main/ocr-uploading-dialog/ocr-uploading-dialog.component.html
+++ b/angular-ocr/src/app/modules/pages/ocr-main/ocr-uploading-dialog/ocr-uploading-dialog.component.html
@@ -1,6 +1,5 @@
 <div class="flex overflow-hidden overflow-y-auto flex-col md:flex-row lg:overflow-hidden w-full h-full">
   <div
-    fileDrop
     (filesDropped)="handleDrop($event)"
     (filesHovered)="dropzoneState($event)"
     [class.hovering]="isHovering"
@@ -18,16 +17,17 @@
       min-h-[50vh] min-w-[40%]
       flex-1
     "
+    fileDrop
   >
     <div class="absolute z-0 p-2 self-center opacity-5 lg:w-96 md:w-64 sm:w-52">
-      <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24">
+      <svg viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg">
         <path
           d="M18.944 11.112C18.507 7.67 15.56 5 12 5 9.244 5 6.85 6.611 5.757 9.15 3.609 9.792 2 11.82 2 14c0 2.757 2.243 5 5 5h11c2.206 0 4-1.794 4-4a4.01 4.01 0 0 0-3.056-3.888zM13 14v3h-2v-3H8l4-5 4 5h-3z"
         ></path>
       </svg>
     </div>
     <div class="block z-10">
-      <input #inputfileDrop type="file" id="fileDrop" multiple (change)="fileBrowserHander($event)" />
+      <input #inputfileDrop (change)="fileBrowserHander($event)" id="fileDrop" multiple type="file"/>
       <h3 class="text-1xl">Thả tệp tin vào đây hoặc</h3>
       <div class="mt-6">
         <button
@@ -58,9 +58,10 @@
     </div>
   </div>
   <ng-container *ngIf="files.length > 0">
-    <div class="flex flex-col flex-[2] m-8 divide-y divide-gray-apple-aqua-300 w-full max-h-[80vh] overflow-hidden overflow-y-auto">
+    <div
+      class="flex flex-col flex-[2] m-8 divide-y divide-gray-apple-aqua-300 w-full max-h-[80vh] overflow-hidden overflow-y-auto">
       <ng-container *ngFor="let file of files; let i = index">
-        <ocr-upload-task class="pt-4 pb-4" [file]="file"></ocr-upload-task>
+        <ocr-upload-task [file]="file" class="pt-4 pb-4"></ocr-upload-task>
       </ng-container>
     </div>
   </ng-container>
