--- a/angular-ocr/src/app/modules/pages/ocr-main/ocr-main-add-folder-dialog/ocr-main-add-folder-dialog.component.html
+++ b/angular-ocr/src/app/modules/pages/ocr-main/ocr-main-add-folder-dialog/ocr-main-add-folder-dialog.component.html
@@ -12,7 +12,14 @@
     <div class="mt-3 text-center sm:mt-0 sm:ml-4 sm:text-left w-full">
       <h3 class="text-lg leading-6 font-medium text-gray-900" id="modal-title">
         {{'OCR.THEMTHUMUCMOI' | translate}}
+        <ng-container *ngIf="activeFolder$ | async as folder">
+          vào thư mục :
+          <span class="text-lg leading-6 font-medium text-orange-apple-aqua-500">
+            {{folder.name}}
+          </span>
+        </ng-container>
       </h3>
+
       <div class="mt-2 w-full">
         <app-share-messages-error></app-share-messages-error>
         <input
