--- a/angular-ocr/src/app/modules/pages/ocr-main/ocr-progressing-dialog/ocr-progressing-dialog.component.html
+++ b/angular-ocr/src/app/modules/pages/ocr-main/ocr-progressing-dialog/ocr-progressing-dialog.component.html
@@ -1,5 +1,6 @@
 <ng-container *ngIf="file">
-  <div class="justify-end items-center px-4 py-3 sm:px-8 sm:flex sm:flex-row p-4 border-solid border-b-2 border-gray-200">
+  <div
+    class="justify-end items-center px-4 py-3 sm:px-8 sm:flex sm:flex-row p-4 border-solid border-b-2 border-gray-200">
     <button
       (click)="nhanDang()"
       class="
@@ -28,8 +29,8 @@
       Nhận dạng
     </button>
     <button
-      *ngIf="showBtnExtract"
       (click)="trichXuatMetadata()"
+      *ngIf="showBtnExtract"
       class="
         w-full
         inline-flex
@@ -57,24 +58,23 @@
     </button>
   </div>
   <div *ngIf="taskid" class="px-4 py-3 sm:px-8 p-4">
-    <ocr-progress-task [state]="state" [percentage]="progressOCR | async"></ocr-progress-task>
+    <ocr-progress-task [percentage]="progressOCR | async" [state]="state"></ocr-progress-task>
   </div>
   <div class="flex overflow-hidden overflow-y-auto flex-col md:flex-row lg:overflow-hidden w-full pt-4 pb-4">
     <div class="flex flex-1 min-h-[50vh]">
-      <div class="flex flex-1" *ngIf="imagePreview">
-        <img *ngIf="!isPdf; else pdf" [src]="imagePreview" />
+      <div *ngIf="imagePreview" class="flex flex-1">
+        <img *ngIf="!isPdf; else pdf" [src]="imagePreview"/>
         <ng-template #pdf>
           <iframe
-            style="height: 100%"
             src="https://s3.us-west-2.amazonaws.com/secure.notion-static.com/3d764c91-a55a-4b97-992b-fc588302dda0/test3.pdf?X-Amz-Algorithm=AWS4-HMAC-SHA256&X-Amz-Credential=AKIAT73L2G45O3KS52Y5%2F20211002%2Fus-west-2%2Fs3%2Faws4_request&X-Amz-Date=20211002T085143Z&X-Amz-Expires=86400&X-Amz-Signature=141d31c0d79d35bc371e93bce80b8b2570f517091f3fba4b2bf35404b06cf11f&X-Amz-SignedHeaders=host&response-content-disposition=filename%20%3D%22test3.pdf%22"
-            frameborder="0"
+            style="height: 100%"
             width="100%"
           ></iframe>
         </ng-template>
       </div>
 
       <div class="flex flex-1">
-        <textarea name="textarea" [(ngModel)]="ocrtext" class="w-full h-full resize-none border rounded-md"></textarea>
+        <textarea [(ngModel)]="ocrtext" class="w-full h-full resize-none border rounded-md" name="textarea"></textarea>
       </div>
       <div class="flex flex-1"></div>
     </div>
