--- a/angular-ocr/src/styles.scss
+++ b/angular-ocr/src/styles.scss
@@ -26,13 +26,13 @@ $angular-ocr-redapple: mat.define-palette($md-redapple);
 $angular-ocr-tealapple: mat.define-palette($md-tealapple);
 
 $angular-ocr-theme: mat.define-light-theme(
-  (
-    color: (
-      primary: $angular-ocr-orangeapple,
-      accent: $angular-ocr-redapple,
-      warn: $angular-ocr-tealapple,
-    ),
-  )
+    (
+      color: (
+        primary: $angular-ocr-orangeapple,
+        accent: $angular-ocr-redapple,
+        warn: $angular-ocr-tealapple,
+      ),
+    )
 );
 
 // Include theme styles for core and each component used in your app.
@@ -182,7 +182,31 @@ html,
 body {
   height: 100%;
 }
+
 body {
+
   margin: 0;
   font-family: Roboto, 'Helvetica Neue', sans-serif;
+
+}
+
+html {
+
+  // ::-webkit-scrollbar-track
+  // {
+  //   -webkit-box-shadow: inset 0 0 6px rgba(0,0,0,0.3);
+  //   background-color: #F5F5F5;
+  // }
+  //
+  // ::-webkit-scrollbar
+  // {
+  //   width: 6px;
+  //   background-color: #F5F5F5;
+  // }
+  //
+  //::-webkit-scrollbar-thumb
+  // {
+  //   background-color: #000000;
+  // }
+
 }
