--- a/angular-ocr/src/app/modules/pages/ocr-main/ocr-main-list-new/ocr-file/ocr-file.component.html
+++ b/angular-ocr/src/app/modules/pages/ocr-main/ocr-main-list-new/ocr-file/ocr-file.component.html
@@ -8,9 +8,11 @@
               <div class="relative ocr-progress-spinner text-orange-600">
                 <!-- TODO -->
                 <!-- <mat-progress-spinner mode="determinate" value="{{ file.progressOcr.total }}" diameter="30"></mat-progress-spinner> -->
-                <mat-progress-spinner diameter="30" mode="determinate" value="80"></mat-progress-spinner>
+                <mat-progress-spinner [value]="file.progressRecognition.result.percent" diameter="30"
+                                      mode="determinate"></mat-progress-spinner>
                 <!-- <span class="text-sm" style="position: absolute; left: 7px; top: 6px">{{ file.progressOcr.total }}</span> -->
-                <span class="text-sm" style="position: absolute; left: 7px; top: 6px">80</span>
+                <span class="text-sm"
+                      style="position: absolute; left: 7px; top: 6px">{{roudPercent(file.progressRecognition.result.percent)}}</span>
               </div>
             </ng-container>
             <ng-container *ngIf="file.isExtractingMetadata">
