--- a/angular-ocr/src/app/modules/pages/ocr-main/ocr-progressing-dialog/ocr-progressing-dialog.component.html
+++ b/angular-ocr/src/app/modules/pages/ocr-main/ocr-progressing-dialog/ocr-progressing-dialog.component.html
@@ -1,10 +1,10 @@
 <ng-container *ngIf="file">
-  <div
-    class="justify-end items-center px-4 py-3 sm:px-8 sm:flex sm:flex-row-reverse p-4 border-solid border-b-2 border-gray-200">
-
-    <button
-      (click)="nhanDang()"
-      class="
+  <div class="flex justify-between border-solid border-b-2 border-gray-200 h-[56px] z-10">
+    <div
+      class="justify-end items-center px-4 py-3 sm:px-8 sm:flex sm:flex-row-reverse p-4">
+      <button
+        (click)="nhanDang()"
+        class="
         w-full
         inline-flex
         justify-center
@@ -26,14 +26,13 @@
         transform
         focus:outline-none focus:ring-2 focus:ring-offset-2 focus:ring-orange-apple-aqua-800
       "
-    >
-      Nhận dạng
-    </button>
-
-    <button
-      (click)="trichXuatMetadata()"
-      *ngIf="showBtnExtract"
-      class="
+      >
+        Nhận dạng
+      </button>
+      <button
+        (click)="trichXuatMetadata()"
+        *ngIf="showBtnExtract"
+        class="
         w-full
         inline-flex
         justify-center
@@ -55,12 +54,12 @@
         transform
         focus:outline-none focus:ring-2 focus:ring-offset-2 focus:ring-teal-apple-aqua-800
       "
-    >
-      Trích xuất Metadata
-    </button>
-    <button
-      (click)="Dong()"
-      class="
+      >
+        Trích xuất Metadata
+      </button>
+      <button
+        (click)="Dong()"
+        class="
         w-full
         inline-flex
         justify-center
@@ -80,30 +79,77 @@
         duration-500
         ease-in-out
         transform
-        focus:outline-none focus:ring-2 focus:ring-offset-2 focus:ring-orange-apple-aqua-800
+        focus:outline-none focus:ring-2 focus:ring-offset-2 focus:ring-gray-apple-aqua-800
       "
-    >
-      Đóng
-    </button>
-  </div>
-  <div *ngIf="file.isRecognition" class="px-4 py-3 sm:px-8 p-4">
-    <ocr-progress-task></ocr-progress-task>
-  </div>
-  <div class="flex overflow-hidden overflow-y-auto flex-col md:flex-row lg:overflow-hidden w-full pt-4 pb-4">
-    <div class="flex flex-1 min-h-[50vh]">
-      <div *ngIf="file.fileRawUrl" class="flex flex-1">
-        <img *ngIf="!isPdf; else pdf" [src]="file.fileRawUrl"/>
-        <ng-template #pdf>
-          <iframe
-            [src]="file.fileRawUrl"
-            style="height: 100%"
-            width="100%"
-          ></iframe>
+      >
+        Đóng
+      </button>
+    </div>
+    <div class="flex justify-end px-2 py-2">
+      <button (click)="ClickFullSreen()"
+              class="
+            px-2
+            py-2
+            flex
+            justify-center
+            items-center
+            w-full
+            bg-gray-200
+            rounded-md
+            focus:text-gray-900 focus:outline-none
+            transition
+            duration-500
+            ease-in-out
+            transform
+            lg:hover:-translate-x lg:hover:scale-105
+          "
+      >
+        <ng-container *ngIf="!isFullSreen; else exitfullseenIcon">
+          <svg class="h-6 w-6" fill="currentColor" height="24" viewBox="0 0 24 24" width="24"
+               xmlns="http://www.w3.org/2000/svg">
+            <path d="M5 5h5V3H3v7h2zm5 14H5v-5H3v7h7zm11-5h-2v5h-5v2h7zm-2-4h2V3h-7v2h5z"></path>
+          </svg>
+        </ng-container>
+        <ng-template #exitfullseenIcon>
+          <svg class="h-6 w-6" fill="currentColor" height="24" viewBox="0 0 24 24" width="24"
+               xmlns="http://www.w3.org/2000/svg">
+            <path d="M10 4H8v4H4v2h6zM8 20h2v-6H4v2h4zm12-6h-6v6h2v-4h4zm0-6h-4V4h-2v6h6z"></path>
+          </svg>
         </ng-template>
+      </button>
+    </div>
+  </div>
+  <div class="overflow-y-auto w-full h-full-56">
+    <div *ngIf="file.isRecognition" class="px-4 py-3 sm:px-8 p-4 h-[60px]">
+      <ocr-progress-task></ocr-progress-task>
+    </div>
+    <div class="flex flex-1">
+      <div #imgBox *ngIf="file.fileRawUrl"
+           class="relative flex">
+        <div>
+          <img *ngIf="!isPdf; else pdf" [alt]="file.name" [src]="file.fileRawUrl"/>
+          <ng-template #pdf>
+            <iframe
+              [src]="file.fileRawUrl"
+              style="height: 100%"
+              width="100%"
+            ></iframe>
+          </ng-template>
+        </div>
+        <div #dragHover (cdkDragMoved)="dragMove(dragHover, $event)" cdkDrag cdkDragLockAxis="x"
+             class="border-solid border-2 border-gray-700 rounded-lg h-full
+          sm:border-l bg-gray-100 right-0 inset-y-0 flex sm:items-center w-4 cursor-[ew-resize] hover:bg-gray-300 transition-colors ease-in ">
+          <svg height="24" viewBox="0 0 24 24" width="24"
+               xmlns="http://www.w3.org/2000/svg">
+            <path
+              d="M19.924 10.383a1 1 0 0 0-.217-1.09l-5-5-1.414 1.414L16.586 9H4v2h15a1 1 0 0 0 .924-.617zM4.076 13.617a1 1 0 0 0 .217 1.09l5 5 1.414-1.414L7.414 15H20v-2H5a.999.999 0 0 0-.924.617z"></path>
+          </svg>
+        </div>
       </div>
 
-      <div *ngIf="file.completeRecognition" class="flex flex-1">
-        <textarea [(ngModel)]="ocrtext" class="w-full h-full resize-none border rounded-md" name="textarea"></textarea>
+      <div #textareaEle *ngIf="file.completeRecognition" class="flex flex-1">
+        <textarea [(ngModel)]="ocrtext" class="w-full h-full resize-none border"
+                  name="textarea"></textarea>
       </div>
       <div *ngIf="file.completeExtractMetadata" class="flex flex-1"></div>
     </div>
