--- a/angular-ocr/src/app/modules/layouts/components/topbar/topbar.component.html
+++ b/angular-ocr/src/app/modules/layouts/components/topbar/topbar.component.html
@@ -27,12 +27,9 @@
 <ng-container *ngIf="auth.isLoggedIn$ | async">
   <div #trigger="cdkOverlayOrigin" (click)="isOpen = !isOpen" cdkOverlayOrigin class="relative flex cursor-pointer">
     <div class="block ">
-      <ng-container *ngIf="(auth.user$ | async).customData.avatarUrl as avatarUrl">
-        <ngx-avatar [src]="avatarUrl" size="40"></ngx-avatar>
-      </ng-container>
-      <ng-container *ngIf="!(auth.user$ | async).customData.avatarUrl">
+      <ng-container *ngIf="(auth.user$ | async) as user">
         <ngx-avatar
-          [name]="(auth.user$ | async).customData.name.slice(0, 1)"
+          [name]="user.name[user.name.length-1].slice(0, 1)"
           [textSizeRatio]="2.5"
           bgColor="#000"
           initialsSize="2"
