--- a/angular-ocr/src/app/modules/pages/ocr-main/ocr-main-list-new/ocr-folder/ocr-folder.component.html
+++ b/angular-ocr/src/app/modules/pages/ocr-main/ocr-main-list-new/ocr-folder/ocr-folder.component.html
@@ -5,21 +5,28 @@
       class="cursor-pointer border-solid  border-b-2 border-gray-apple-aqua-300">
     <td
       class="px-4 py-4 h-full whitespace-nowrap align-middle font-extrabold">
-                  <span class="pr-2 ">
-                    <ng-container *ngIf="!folder.isOpen; else closeFolderSvg">
-                       <svg class="relative inline-block" height="24" viewBox="0 0 24 24" width="24"
-                            xmlns="http://www.w3.org/2000/svg">
-                      <path
-                        d="M20 5h-9.586L8.707 3.293A.997.997 0 0 0 8 3H4c-1.103 0-2 .897-2 2v14c0 1.103.897 2 2 2h16c1.103 0 2-.897 2-2V7c0-1.103-.897-2-2-2z"
-                      ></path>
-                    </svg>
-                    </ng-container>
-                    <ng-template #closeFolderSvg>
-                      <svg class="relative inline-block" height="24" viewBox="0 0 24 24" width="24"
-                           xmlns="http://www.w3.org/2000/svg"><path
-                        d="M2.165 19.551c.186.28.499.449.835.449h15c.4 0 .762-.238.919-.606l3-7A.998.998 0 0 0 21 11h-1V8c0-1.103-.897-2-2-2h-6.655L8.789 4H4c-1.103 0-2 .897-2 2v13h.007a1 1 0 0 0 .158.551zM18 8v3H6c-.4 0-.762.238-.919.606L4 14.129V8h14z"></path></svg>
-                    </ng-template>
-                  </span>
+      <span class="pr-2 ">
+        <ng-container *ngIf="!folder.isOpen; else closeFolderSvg">
+          <!-- icon right arrow -->
+          <svg class="relative inline-block" height="24" viewBox="0 0 24 24" width="24"
+               xmlns="http://www.w3.org/2000/svg"><path
+            d="M5.536 21.886a1.004 1.004 0 0 0 1.033-.064l13-9a1 1 0 0 0 0-1.644l-13-9A1 1 0 0 0 5 3v18a1 1 0 0 0 .536.886z">
+          </path></svg>
+          <!-- icon folder close-->
+          <svg class="relative inline-block" height="24" viewBox="0 0 24 24" width="24"
+               xmlns="http://www.w3.org/2000/svg">
+          <path
+            d="M20 5h-9.586L8.707 3.293A.997.997 0 0 0 8 3H4c-1.103 0-2 .897-2 2v14c0 1.103.897 2 2 2h16c1.103 0 2-.897 2-2V7c0-1.103-.897-2-2-2z"
+          ></path>
+        </svg>
+        </ng-container>
+        <ng-template #closeFolderSvg>
+          <!-- icon folder open-->
+          <svg class="relative inline-block" height="24" viewBox="0 0 24 24" width="24"
+               xmlns="http://www.w3.org/2000/svg"><path
+            d="M2.165 19.551c.186.28.499.449.835.449h15c.4 0 .762-.238.919-.606l3-7A.998.998 0 0 0 21 11h-1V8c0-1.103-.897-2-2-2h-6.655L8.789 4H4c-1.103 0-2 .897-2 2v13h.007a1 1 0 0 0 .158.551zM18 8v3H6c-.4 0-.762.238-.919.606L4 14.129V8h14z"></path></svg>
+        </ng-template>
+      </span>
       {{ folder.name }}
     </td>
     <!-- trạng thái-->
