phong update up file thu muc goc

--- a/angular-ocr/src/app/modules/pages/folder-user/folder-user-list/file-orc-extract-progressing/ocr-file-page/ocr-file-page.component.html
+++ b/angular-ocr/src/app/modules/pages/folder-user/folder-user-list/file-orc-extract-progressing/ocr-file-page/ocr-file-page.component.html
@@ -1,15 +1,16 @@
 <div
   class="bg-white px-4 py-3 flex items-center justify-between border-t border-gray-200 sm:px-6 ">
   <div class="flex-1 flex justify-between sm:hidden">
-    <a
-      class="relative inline-flex items-center px-4 py-2 border border-gray-300 text-sm font-medium rounded-md text-gray-700 bg-white hover:bg-gray-50"
+    <a (click)="previouPage()"
+       class="relative inline-flex items-center px-4 py-2 border border-gray-300 text-sm font-medium rounded-md text-gray-700 bg-white hover:bg-gray-50"
     >
-      Previous
+      Về trang trước
     </a>
-    <a
-      class="ml-3 relative inline-flex items-center px-4 py-2 border border-gray-300 text-sm font-medium rounded-md text-gray-700 bg-white hover:bg-gray-50"
+    <span>{{currentPage}}/{{file.page_count}}</span>
+    <a (click)="nextPage()"
+       class="ml-3 relative inline-flex items-center px-4 py-2 border border-gray-300 text-sm font-medium rounded-md text-gray-700 bg-white hover:bg-gray-50"
     >
-      Next
+      Trang sau
     </a>
   </div>
   <div class="hidden sm:flex-1 sm:flex sm:items-center sm:justify-between">
