--- a/angular-ocr/src/app/modules/pages/folder-user/add-new-file-dialog/add-new-file-dialog.component.html
+++ b/angular-ocr/src/app/modules/pages/folder-user/add-new-file-dialog/add-new-file-dialog.component.html
@@ -8,6 +8,14 @@
         {{folder.name}}
       </span>
   </ng-container>
+  <ng-container *ngIf="ocrService.isRootFolder$ | async">
+    <span class="text-lg leading-6 font-medium">
+      Thêm tệp tin vào thư mục:
+    </span>&nbsp;
+    <span class="text-lg leading-6 font-medium text-orange-apple-aqua-500">
+        Thư mục gốc
+      </span>
+  </ng-container>
 </div>
 <file-uploading-dialog></file-uploading-dialog>
 <div
