--- a/angular-ocr/src/app/modules/pages/folder-user/folder-user-list/folder-user-list.component.html
+++ b/angular-ocr/src/app/modules/pages/folder-user/folder-user-list/folder-user-list.component.html
@@ -2,11 +2,12 @@
   <div class="mx-auto">
     <!-- filter top -->
     <div class="flex justify-end bg-gray-500 h-20">
-      <!--  add new folder-->
-      <div (click)="addNewFoler()" class="flex m-4" delay="500" placement="bottom"
-           tooltip="{{ 'OCR.TAOFOLDER' | translate }}">
-        <button
-          class="
+      <ng-container *ngIf="(service.activeFolder$ | async) as folder; else addnew">
+        <!--  delete folder -->
+        <div (click)="deleteFolder()" class="flex m-4" delay="500" placement="bottom"
+             tooltip="{{ 'OCR.XOATHUMUC' | translate }}">
+          <button
+            class="
             px-4
             py-3
             flex
@@ -22,16 +23,47 @@
             transform
             lg:hover:-translate-x lg:hover:scale-105
           "
-        >
-          <svg fill="currentColor"
-               height="24" viewBox="0 0 24 24" width="24"
-               xmlns="http://www.w3.org/2000/svg">
-            <path d="M13 9h-2v3H8v2h3v3h2v-3h3v-2h-3z"></path>
-            <path
-              d="M20 5h-8.586L9.707 3.293A.996.996 0 0 0 9 3H4c-1.103 0-2 .897-2 2v14c0 1.103.897 2 2 2h16c1.103 0 2-.897 2-2V7c0-1.103-.897-2-2-2zM4 19V7h16l.002 12H4z"></path>
-          </svg>
-        </button>
-      </div>
+          >
+            <svg fill="currentColor" height="24" viewBox="0 0 24 24" width="24"
+                 xmlns="http://www.w3.org/2000/svg">
+              <path
+                d="M6 7H5v13a2 2 0 0 0 2 2h10a2 2 0 0 0 2-2V7H6zm4 12H8v-9h2v9zm6 0h-2v-9h2v9zm.618-15L15 2H9L7.382 4H3v2h18V4z"></path>
+            </svg>
+          </button>
+        </div>
+      </ng-container>
+      <ng-template #addnew>
+        <!--  add new folder-->
+        <div (click)="addNewFoler()" class="flex m-4" delay="500" placement="bottom"
+             tooltip="{{ 'OCR.TAOFOLDER' | translate }}">
+          <button
+            class="
+            px-4
+            py-3
+            flex
+            bg-gray-200
+            justify-center
+            items-center
+            w-full
+            rounded-md
+            focus:text-gray-900 focus:outline-none
+            transition
+            duration-500
+            ease-in-out
+            transform
+            lg:hover:-translate-x lg:hover:scale-105
+          "
+          >
+            <svg fill="currentColor"
+                 height="24" viewBox="0 0 24 24" width="24"
+                 xmlns="http://www.w3.org/2000/svg">
+              <path d="M13 9h-2v3H8v2h3v3h2v-3h3v-2h-3z"></path>
+              <path
+                d="M20 5h-8.586L9.707 3.293A.996.996 0 0 0 9 3H4c-1.103 0-2 .897-2 2v14c0 1.103.897 2 2 2h16c1.103 0 2-.897 2-2V7c0-1.103-.897-2-2-2zM4 19V7h16l.002 12H4z"></path>
+            </svg>
+          </button>
+        </div>
+      </ng-template>
       <!-- add new -->
       <div (click)="addNew()" class="flex m-4" delay="500" placement="bottom" tooltip="{{ 'OCR.THEMMOI' | translate }}">
         <button
@@ -139,6 +171,7 @@
           </svg>
         </button>
       </div>
+
     </div>
 
     <div [ngClass]="(service.showComponentProgressFile$ | async) ? 'grid grid-cols-4 gap-4 body-list-table m-2' : ''">
@@ -160,16 +193,17 @@
               <th class="px-4 py-3 align-middle min-w-[150px]">NGƯỜI KÝ</th>
             </tr>
             </thead>
-            <ng-container *ngIf="(service.lstOcrNodel$ | async) as datasoucre">
+            <ng-container *ngIf="(folders$ | async) as datasoucre">
               <ng-container *ngFor="let element of datasoucre">
-                <ng-container *ngIf="element.type==='folder'">
-                  <tbody (click)="activeFolder(element)"
-                         [folder]="element"
-                         app-folder-node-list
-                         class="bg-white">
-                  </tbody>
-                </ng-container>
+                <tbody (click)="activeFolder(element)"
+                       [folder]="element"
+                       app-folder-node-list
+                       class="bg-white">
+                </tbody>
               </ng-container>
+            </ng-container>
+            <ng-container *ngIf="(files$ | async) as files">
+              <tbody [childs]="files" app-progress-file-list-component></tbody>
             </ng-container>
           </table>
         </div>
