--- a/angular-ocr/src/app/modules/pages/folder-user/folder-user-list/folder-node-list/folder-node-list.component.html
+++ b/angular-ocr/src/app/modules/pages/folder-user/folder-user-list/folder-node-list/folder-node-list.component.html
@@ -8,11 +8,15 @@
       <span class="pr-2 ">
         <ng-container *ngIf="!isOpen; else closeFolderSvg">
           <!-- icon right arrow -->
-            <svg class="relative inline-block" height="16" viewBox="0 0 24 24" width="16"
+            <svg class="relative inline-block text-mint-apple-aqua-500" fill="currentColor" height="16"
+                 viewBox="0 0 24 24"
+                 width="16"
                  xmlns="http://www.w3.org/2000/svg"><path
               d="M5.536 21.886a1.004 1.004 0 0 0 1.033-.064l13-9a1 1 0 0 0 0-1.644l-13-9A1 1 0 0 0 5 3v18a1 1 0 0 0 .536.886z"></path></svg>
           <!-- icon folder close-->
-           <svg class="relative inline-block" height="24" viewBox="0 0 24 24" width="24"
+           <svg class="relative inline-block text-teal-apple-aqua-400" fill="currentColor" height="24"
+                viewBox="0 0 24 24"
+                width="24"
                 xmlns="http://www.w3.org/2000/svg">
           <path
             d="M20 5h-9.586L8.707 3.293A.997.997 0 0 0 8 3H4c-1.103 0-2 .897-2 2v14c0 1.103.897 2 2 2h16c1.103 0 2-.897 2-2V7c0-1.103-.897-2-2-2z"
@@ -21,7 +25,9 @@
         </ng-container>
         <ng-template #closeFolderSvg>
           <!-- icon down arrow-->
-          <svg class="relative inline-block" height="16" viewBox="0 0 24 24" width="16"
+          <svg class="relative inline-block text-teal-apple-aqua-500" fill="currentColor" height="16"
+               viewBox="0 0 24 24"
+               width="16"
                xmlns="http://www.w3.org/2000/svg"><path
             d="M11.178 19.569a.998.998 0 0 0 1.644 0l9-13A.999.999 0 0 0 21 5H3a1.002 1.002 0 0 0-.822 1.569l9 13z"></path></svg>
           <!-- icon folder open-->
@@ -29,7 +35,8 @@
           <!--               xmlns="http://www.w3.org/2000/svg"><path-->
           <!--            d="M2.165 19.551c.186.28.499.449.835.449h15c.4 0 .762-.238.919-.606l3-7A.998.998 0 0 0 21 11h-1V8c0-1.103-.897-2-2-2h-6.655L8.789 4H4c-1.103 0-2 .897-2 2v13h.007a1 1 0 0 0 .158.551zM18 8v3H6c-.4 0-.762.238-.919.606L4 14.129V8h14z">-->
           <!--          </path></svg>-->
-          <svg class="relative inline-block" height="24" viewBox="0 0 24 24" width="24"
+          <svg class="relative inline-block text-teal-apple-aqua-400" fill="currentColor" height="24"
+               viewBox="0 0 24 24" width="24"
                xmlns="http://www.w3.org/2000/svg">
           <path
             d="M20 5h-9.586L8.707 3.293A.997.997 0 0 0 8 3H4c-1.103 0-2 .897-2 2v14c0 1.103.897 2 2 2h16c1.103 0 2-.897 2-2V7c0-1.103-.897-2-2-2z"
@@ -73,9 +80,6 @@
           app-progress-file-list-component
           class="border-solid bg-teal-apple-aqua-100  border-b-2 border-gray-apple-aqua-300 ">
       </tr>
-
     </ng-container>
-
   </ng-container>
-
 </ng-container>
