--- a/angular-ocr/src/app/modules/layouts/components/header/header.component.html
+++ b/angular-ocr/src/app/modules/layouts/components/header/header.component.html
@@ -1,11 +1,11 @@
 <!-- This example requires Tailwind CSS v2.0+ -->
-<div class="bg-white shadow p-2">
-  <div class="max-w-full mx-auto px-6 sm:px-6">
-    <div class="flex justify-between items-center py-3 md:justify-start md:space-x-10">
-      <div class="flex justify-start lg:w-0 lg:flex-1"></div>
-      <nav class="flex flex-1">
-        <div class="relative flex-1 mx-1">
-          <span class="absolute inset-y-0 left-0 flex items-center pl-2">
+<div class="bg-white shadow drop-shadow">
+  <div class="max-w-full mx-auto sm:px-6">
+    <div class="flex justify-between items-center md:justify-start md:space-x-10 py-2">
+      <nav class="md:flex flex-1 ">
+        <div class="relative flex-1 justify-center">
+          <div class="max-w-lg justify-center mx-auto my-auto relative">
+           <span class="absolute inset-y-0 left-0 flex items-center pl-2">
             <button type="submit" class="p-1 focus:outline-none focus:shadow-outline">
               <svg
                 fill="none"
@@ -14,22 +14,23 @@
                 stroke-linejoin="round"
                 stroke-width="2"
                 viewBox="0 0 24 24"
-                class="w-6 h-6"
+                class="w-4 h-4"
               >
                 <path d="M21 21l-6-6m2-5a7 7 0 11-14 0 7 7 0 0114 0z"></path>
               </svg>
             </button>
           </span>
-          <input
-            type="search"
-            name="q"
-            class="w-full rounded-full py-2 text-sm pl-10 focus:outline-none focus:ring-2 focus:ring-gray-500 focus:border-transparent"
-            placeholder=""
-            autocomplete="off"
-          />
+            <input
+              type="search"
+              name="q"
+              class="w-full rounded-full text-sm pl-10 focus:outline-none focus:ring-2 focus:ring-gray-500 focus:border-transparent"
+              placeholder=""
+              autocomplete="off"
+            />
+          </div>
         </div>
       </nav>
-      <div class="md:flex items-center justify-end md:flex-1 lg:w-0 align-middle">
+      <div class="md:flex items-center justify-end pl-6 lg:w-0 align-middle">
         <app-topbar></app-topbar>
       </div>
     </div>
