--- a/angular-ocr/src/app/modules/layouts/components/left-menu/left-menu.component.html
+++ b/angular-ocr/src/app/modules/layouts/components/left-menu/left-menu.component.html
@@ -1,17 +1,16 @@
 <!-- Side Nav Bar-->
 <ul>
   <!-- open/close -->
-  <li class="m-1">
-    <a class="cursor-pointer px-3 py-2 flex justify-center items-center w-full focus:text-gray-100">
+  <li >
+    <a class="logo">
       <img class="h-8 w-auto sm:h-10" src="assets/images/logos/ademax_no_font.png" alt="" />
     </a>
   </li>
   <!-- dashboard -->
-  <li class="lg:hover:bg-gray-300 lg:hover:rounded-md ml-7 mr-7 m-5">
+  <li class="menu-icon">
     <a
       routerLink="dashboard"
       routerLinkActive="bg-gray-300 rounded-md text-gray-900 "
-      class="px-2 py-2 flex justify-center items-center w-full focus:text-gray-900 lg:hover:text-gray-900"
     >
       <svg
         class="h-6 w-6"
@@ -32,7 +31,7 @@
     </a>
   </li>
   <!-- app -->
-  <li class="lg:hover:bg-gray-300 lg:hover:rounded-md ml-7 mr-7 m-5">
+  <li class="menu-icon">
     <a
       routerLink="app"
       routerLinkActive="bg-gray-300 rounded-md text-gray-900"
