--- a/angular-ocr/src/app/modules/pages/folder-user/folder-user-list/folder-user-list.component.html
+++ b/angular-ocr/src/app/modules/pages/folder-user/folder-user-list/folder-user-list.component.html
@@ -1,54 +1,21 @@
 <div class="relative">
   <div class="mx-auto">
     <!-- filter top -->
-    <div class="flex justify-end bg-gray-500 h-20">
+    <div class="flex justify-end bg-gray-500">
       <ng-container *ngIf="(service.activeFolder$ | async) as folder; else addnew">
         <!-- move  -->
-        <div (click)="move()" class="flex m-4" delay="500" placement="bottom" tooltip="{{ 'OCR.MOVE' | translate }}">
+        <div (click)="move()" class="action-filter" delay="500" placement="bottom" tooltip="{{ 'OCR.MOVE' | translate }}">
           <button
-            class="
-            px-4
-            py-3
-            flex
-            bg-gray-200
-            justify-center
-            items-center
-            w-full
-            rounded-md
-            focus:text-gray-900 focus:outline-none
-            transition
-            duration-500
-            ease-in-out
-            transform
-            lg:hover:-translate-x lg:hover:scale-105
-          "
-          >
+            class="btn-action-filter">
             <svg fill="currentColor" height="24" viewBox="0 0 24 24" width="24" xmlns="http://www.w3.org/2000/svg">
               <path d="M18 11h-5V6h3l-4-4-4 4h3v5H6V8l-4 4 4 4v-3h5v5H8l4 4 4-4h-3v-5h5v3l4-4-4-4z"></path>
             </svg>
           </button>
         </div>
         <!-- rename  -->
-        <div (click)="rename()" class="flex m-4" delay="500" placement="bottom"
+        <div (click)="rename()" class="action-filter" delay="500" placement="bottom"
              tooltip="{{ 'OCR.RENAME' | translate }}">
-          <button
-            class="
-            px-4
-            py-3
-            flex
-            bg-gray-200
-            justify-center
-            items-center
-            w-full
-            rounded-md
-            focus:text-gray-900 focus:outline-none
-            transition
-            duration-500
-            ease-in-out
-            transform
-            lg:hover:-translate-x lg:hover:scale-105
-          "
-          >
+          <button class="btn-action-filter">
             <svg fill="currentColor" height="24" viewBox="0 0 24 24" width="24"
                  xmlns="http://www.w3.org/2000/svg">
               <path
@@ -59,26 +26,9 @@
           </button>
         </div>
         <!--  delete folder -->
-        <div (click)="deleteFolder()" class="flex m-4" delay="500" placement="bottom"
+        <div (click)="deleteFolder()" class="action-filter" delay="500" placement="bottom"
              tooltip="{{ 'OCR.XOATHUMUC' | translate }}">
-          <button
-            class="
-            px-4
-            py-3
-            flex
-            bg-gray-200
-            justify-center
-            items-center
-            w-full
-            rounded-md
-            focus:text-gray-900 focus:outline-none
-            transition
-            duration-500
-            ease-in-out
-            transform
-            lg:hover:-translate-x lg:hover:scale-105
-          "
-          >
+          <button class="btn-action-filter">
             <svg fill="currentColor" height="24" viewBox="0 0 24 24" width="24"
                  xmlns="http://www.w3.org/2000/svg">
               <path
@@ -89,26 +39,9 @@
       </ng-container>
       <ng-template #addnew>
         <!--  add new folder-->
-        <div (click)="addNewFoler()" class="flex m-4" delay="500" placement="bottom"
+        <div (click)="addNewFoler()" class="action-filter" delay="500" placement="bottom"
              tooltip="{{ 'OCR.TAOFOLDER' | translate }}">
-          <button
-            class="
-            px-4
-            py-3
-            flex
-            bg-gray-200
-            justify-center
-            items-center
-            w-full
-            rounded-md
-            focus:text-gray-900 focus:outline-none
-            transition
-            duration-500
-            ease-in-out
-            transform
-            lg:hover:-translate-x lg:hover:scale-105
-          "
-          >
+          <button class="btn-action-filter">
             <svg fill="currentColor"
                  height="24" viewBox="0 0 24 24" width="24"
                  xmlns="http://www.w3.org/2000/svg">
@@ -120,24 +53,9 @@
         </div>
       </ng-template>
       <!-- add new -->
-      <div (click)="addNew()" class="flex m-4" delay="500" placement="bottom" tooltip="{{ 'OCR.THEMMOI' | translate }}">
+      <div (click)="addNew()" class="action-filter" delay="500" placement="bottom" tooltip="{{ 'OCR.THEMMOI' | translate }}">
         <button
-          class="
-            px-4
-            py-3
-            flex
-            bg-gray-200
-            justify-center
-            items-center
-            w-full
-            rounded-md
-            focus:text-gray-900 focus:outline-none
-            transition
-            duration-500
-            ease-in-out
-            transform
-            lg:hover:-translate-x lg:hover:scale-105
-          "
+          class="btn-action-filter"
         >
           <svg
             fill="currentColor"
@@ -160,24 +78,9 @@
         </button>
       </div>
       <!-- filter -->
-      <div class="flex m-4">
+      <div class="action-filter">
         <button
-          class="
-            px-4
-            py-3
-            flex
-            justify-center
-            items-center
-            w-full
-            bg-gray-200
-            rounded-md
-            focus:text-gray-900 focus:outline-none
-            transition
-            duration-500
-            ease-in-out
-            transform
-            lg:hover:-translate-x lg:hover:scale-105
-          "
+          class="btn-action-filter"
           delay="500"
           placement="bottom"
           tooltip="{{ 'OCR.LOC' | translate }}"
@@ -193,24 +96,9 @@
         </button>
       </div>
       <!-- search -->
-      <div class="flex m-4">
+      <div class="action-filter">
         <button
-          class="
-            px-4
-            py-3
-            flex
-            justify-center
-            items-center
-            w-full
-            bg-gray-200
-            rounded-md
-            focus:text-gray-900 focus:outline-none
-            transition
-            duration-500
-            ease-in-out
-            transform
-            lg:hover:-translate-x lg:hover:scale-105
-          "
+          class="btn-action-filter"
           delay="500"
           placement="bottom"
           tooltip="{{ 'OCR.TIMKIEM' | translate }}"
@@ -226,11 +114,10 @@
           </svg>
         </button>
       </div>
-
     </div>
 
-    <div [ngClass]="(service.showComponentProgressFile$ | async) ? 'grid grid-cols-4 gap-4 body-list-table m-2' : ''">
-      <div class="w-full mb-8 overflow-hidden rounded-lg shadow-lg bg-white h-full">
+    <div [ngClass]="(service.showComponentProgressFile$ | async) ? 'grid grid-cols-4 body-list-table' : ''">
+      <div class="w-full overflow-hidden shadow-lg bg-white h-full">
         <div class="w-full overflow-x-auto h-full">
           <table class="w-full table-auto ">
             <thead>
@@ -265,7 +152,7 @@
       </div>
       <ng-container *ngIf="service.showComponentProgressFile$ | async">
         <div [ngClass]="isFullSreenComponent? 'fixed  top-0 left-0 z-50  w-screen h-screen' : ''"
-             class="w-full mb-8 overflow-hidden rounded-lg shadow-lg bg-white h-full col-span-3">
+             class="w-full mb-8 overflow-hidden shadow-lg bg-white h-full col-span-3">
           <div (isFullSreen)="getisFullSreenComponent($event)" app-file-orc-extract-progressing class="w-full h-full">
           </div>
         </div>
